# ctxvault

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/01-langchain-rag/: langchain_rag_example.py  requirements.txt
examples/01-langchain-rag/vault/: test.docx  test.md  test.txt
examples/01-langchain-rag/vault/chroma/1efe02d5-6ceb-4b1f-9544-05a51585d3a4/: index_metadata.pickle
examples/01-simple-rag/: README.md
examples/02-multi-agent-isolation/: README.md
examples/03-persistent-memory/: README.md
src/: main.py
src/ctxvault/api/: routes.py  schemas.py
src/ctxvault/cli/: app.py
src/ctxvault/core/: __init__.py  embedding.py  exceptions.py  indexer.py  querying.py  vault.py
src/ctxvault/models/: query_result.py
src/ctxvault/storage/: chroma_store.py
src/ctxvault/utils/: chuncking.py  config.py  metadata_builder.py
tests/: conftest.py  test_api.py  test_cli.py  test_core.py
