[project]
name = "ctxvault"
version = "0.1.0"
description = "Context Vault CLI tool"
dependencies = [
    "typer>=0.20.0",
    "chromadb>=1.3.0",
    "sentence-transformers>=5.0.0",
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.2.0",
    "pydantic>=2.12.0",
    "rich>=14.0.0",
    "pypdf>=6.0.0",
    "python-docx>=1.0.0",
    "markdown>=3.0.0",
    "strip-tags>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
    "pytest-anyio>=0.0.0",
    "black>=25.0.0",
    "isort>=7.0.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
ctxvault = "ctxvault.cli.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ctxvault"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]